# lirpc-rs-client

./: Cargo.toml  justfile
lirpc_client/: Cargo.toml
lirpc_client/examples/: greeter.rs
lirpc_client/src/: error.rs  lib.rs  lirpc_message.rs
lirpc_client/src/serializers/: bytes_serializer.rs  mod.rs  string_serializer.rs
lirpc_client/src/transport/: mod.rs  tcp.rs  websocket.rs
lirpc_rs_codegen/: Cargo.toml
lirpc_rs_codegen/src/: lib.rs  tests.rs
