[package]
name = "lirpc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
rustls = "0.23.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
webpki-roots = "1.0.8"
